--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -94,13 +94,6 @@ spec:
         image: "{{ .Values.image }}:{{ .Values.imageTag }}"
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         env:
-          {{- if .Values.elasticsearchURL }}
-          - name: ELASTICSEARCH_URL
-            value: "{{ .Values.elasticsearchURL }}"
-          {{- else if .Values.elasticsearchHosts }}
-          - name: ELASTICSEARCH_HOSTS
-            value: "{{ .Values.elasticsearchHosts }}"
-          {{- end }}
           - name: SERVER_HOST
             value: "{{ .Values.serverHost }}"
 {{- if .Values.extraEnvs }}
@@ -110,6 +103,7 @@ spec:
         envFrom:
 {{ toYaml .Values.envFrom | indent 10 }}
 {{- end }}
+{{- if .Values.readinessProbe.enabled }}
         readinessProbe:
 {{ toYaml .Values.readinessProbe | indent 10 }}
           exec:
@@ -141,6 +135,7 @@ spec:
                 }
 
                 http "{{ .Values.healthCheckPath }}"
+{{- end }}
         ports:
         - containerPort: {{ .Values.httpPort }}
 {{- if .Values.lifecycle }}
