--- a/values.yaml
+++ b/values.yaml
@@ -159,6 +159,7 @@ ingress:
   #      - chart-example.local
 
 readinessProbe:
+  enabled: false
   failureThreshold: 3
   initialDelaySeconds: 10
   periodSeconds: 10
