--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -103,39 +103,15 @@ spec:
         envFrom:
 {{ toYaml .Values.envFrom | indent 10 }}
 {{- end }}
-{{- if .Values.readinessProbe.enabled }}
         readinessProbe:
-{{ toYaml .Values.readinessProbe | indent 10 }}
-          exec:
-            command:
-              - bash
-              - -c
-              - |
-                #!/usr/bin/env bash -e
-
-                # Disable nss cache to avoid filling dentry cache when calling curl
-                # This is required with Kibana Docker using nss < 3.52
-                export NSS_SDB_USE_CACHE=no
-
-                http () {
-                    local path="${1}"
-                    set -- -XGET -s --fail -L
-
-                    if [ -n "${ELASTICSEARCH_USERNAME}" ] && [ -n "${ELASTICSEARCH_PASSWORD}" ]; then
-                      set -- "$@" -u "${ELASTICSEARCH_USERNAME}:${ELASTICSEARCH_PASSWORD}"
-                    fi
-
-                    STATUS=$(curl --output /dev/null --write-out "%{http_code}" -k "$@" "{{ .Values.protocol }}://localhost:{{ .Values.httpPort }}${path}")
-                    if [[ "${STATUS}" -eq 200 ]]; then
-                      exit 0
-                    fi
-
-                    echo "Error: Got HTTP code ${STATUS} but expected a 200"
-                    exit 1
-                }
-
-                http "{{ .Values.healthCheckPath }}"
-{{- end }}
+          failureThreshold: 5
+          httpGet:
+            path: /elastickibana
+            port: 5601
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
         ports:
         - containerPort: {{ .Values.httpPort }}
 {{- if .Values.lifecycle }}
